<resources>
    <string name="app_name">Economize</string>
    <string name="app_name_user">Usurário Economize</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_login_action">Logar</string>
    <!-- Strings Login Em PT -->
    <string name="titulo_boas_vindas">Bem vindo ao Economize!</string>
    <string name="title_activity_login">Entrar</string>
    <string name="ac_entrar">Entrar</string>
    <string name="pr_nome">Nome</string>
    <string name="pr_senha">Senha</string>
    <string name="pr_senha_exemplo">*****</string>
    <string name="title_usrs">Usuarios cadastrados</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="ac_cadastrese">Cadastre-se</string>
    <string name="ac_cadastrarse">Cadastrar-se</string>

    <string name="title_activity_pos_logagem">activity_pos_logagem</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_acivity_pos_logagem">acivity_pos_logagem</string>

    <!-- TÍTULOS DO DRAWER -->
    <string name="drw_linha">_________________________</string>
    <string name="drw_title_add_orcamento">Adicionar Orçamento</string>
    <string name="drw_title_add_transacao">Adicionar Transação</string>
    <string name="drw_title_add_categoria">Adicionar Categoria</string>
    <string name="drw_title_categorias">Categorias</string>
    <string name="drw_title_orcamentos">Orçamentos</string>
    <string name="drw_title_transacoes">Transações</string>
    <string name="drw_title_grafico_primeiro">Primeiro gráfico</string>
    <string name="drw_title_graf_lucros">Gráficos de Lucros</string>
    <string name="drw_title_graf_despesas">Gráficos de Despesas</string>
    <string name="drw_title_graf_orcamentos">Gráficos de Orçamentos</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- frag Nova Transação -->
    <string name="pr_valor">Valor</string>
    <string name="pr_valor_exemplo">valor[R$ 00,0]</string>
    <string name="rdb_ganho">Lucro</string>
    <string name="rdb_despesa">Despesa</string>
    <string name="chb_tipo_de_pagamento">Pagamento recorrente</string>
    <string name="pr_titulo">Título</string>
    <string name="pr_descricao">Descrição</string>
    <string name="pr_descricao_exemplo">sua descrição aquí</string>
    <!-- frag transação não recorrente-->
    <string name="dt_ocorrencia">Data de ocorrencia</string>
    <string name="dt_ocorrencia_exemplo">DD/MM/AAAA</string>
    <!-- frag transação recorrente-->
    <string name="dt_inicio">Data de início</string>
    <string name="dt_fim">Data de fim</string>
    <string name="dt_exemplo">DD/MM/AAAA</string>
    <string name="spnn_ocorrencia">Ocorrencia</string>
    <!-- frag nova categoria -->
    <string name="spnn_categoria">Categoria</string>
    <string name="pr_tipo_de_operacao_ex">defina o tipo de operação</string>
    <string name="pr_tipo_de_operacao">Tipo de operação</string>
    <!-- frag novo orçamento -->
    <string name="spnn_abrangencia">Abrangência</string>e
    <!-- view sing-up -->
    <string name="pr_email">Email</string>
    <string name="pr_email_ex">email@exemplo.com</string>
    <string name="pr_repita_senha">Repita a senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="mesesinhos">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <string name="pr_grupo">Grupo</string>
    <string name="transacao_recorrente">Transação recorrente:</string>

    <string name="editar">Editar</string>
    <string name="descricao">Descrição</string>

    <string-array name="cores">
        <item name="bright_pink">FF007F</item>
        <item name="red">FF0000</item>
        <item name="orange">FF7F00</item>
        <item name="yellow">FFFF00</item>
        <item name="chartreuse">7FFF00</item>
        <item name="green">00FF00</item>
        <item name="spring_green">00FF7F</item>
        <item name="cyan">00FFFF</item>
        <item name="azure">007FFF</item>
        <item name="blue">0000FF</item>
        <item name="violet">7F00FF</item>
        <item name="magenta">FF00FF</item>
    </string-array>

    <string name="titulo_economize">Aplicativo de
        controle de finanças
        Economize</string>
    <string name="titulo_bem_vindo">Seja Bem Vindo!</string>
    <string name="titulo_texto">Mantenha as suas finanças sobcontrole!</string>
</resources>