<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orc"
            android:icon="@drawable/budget"
            android:title="@string/drw_title_add_orcamento" />
        <item
            android:id="@+id/nav_addtrans"
            android:icon="@drawable/transaction"
            android:title="@string/drw_title_add_transacao" />
        <item
            android:id="@+id/nav_addcat"
            android:icon="@drawable/category"
            android:title="@string/drw_title_add_categoria" />
    </group>

    <item android:title="@string/drw_linha" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listaCat"
            android:icon="@drawable/list"
            android:title="@string/drw_title_categorias" />
        <item
            android:id="@+id/nav_listaOrc"
            android:icon="@drawable/list"
            android:title="@string/drw_title_orcamentos" />
        <item
            android:id="@+id/nav_listaTrans"
            android:icon="@drawable/list"
            android:title="@string/drw_title_transacoes" />

    </group>

    <item android:title="@string/drw_linha" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_graph_first"
            android:icon="@drawable/graphs"
            android:title="@string/drw_title_grafico_primeiro" />
        <item
            android:id="@+id/nav_graf_lucro"
            android:icon="@drawable/graphs"
            android:title="@string/drw_title_graf_lucros" />
        <item
            android:id="@+id/nav_graf_despesas"
            android:icon="@drawable/graphs"
            android:title="@string/drw_title_graf_despesas" />
    </group>

</menu>
