<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aedes.economize.Frags_Formularios.FragNovoOrcamento">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout15"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout14"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout14"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout14"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_nome" />

            <EditText
                android:id="@+id/et_OrcNome"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pr_nome"
                android:inputType="textPersonName"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout16"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout16"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_valor" />

            <EditText
                android:id="@+id/et_OrcValor"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pr_valor_exemplo"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout16"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout17"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout17"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout17"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spnn_abrangencia" />

            <Spinner
                android:id="@+id/spnn_OrcAbrangencia"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout17"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="411dp">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pr_descricao" />

            <EditText
                android:id="@+id/et_OrcDescricao"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pr_descricao_exemplo"
                android:inputType="textMultiLine"
                android:textAlignment="center" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fltb_adicionar"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fltb_cancelar"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="88dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="347dp"></LinearLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
